Added script to create and add progress element to html body and logic for page scroll progress

--- a/index.html
+++ b/index.html
@@ -243,5 +243,6 @@ Curabitur sed ligula euismod, facilisis sem ac, posuere ex. Fusce euismod felis 
     <footer>
         <p>&copy; 2024 Mock Website. All rights reserved.</p>
     </footer>
+    <script defer src="/progress.js" />
 </body>
 </html>
